--- a/packages/base/style/shared/tabs.css
+++ b/packages/base/style/shared/tabs.css
@@ -7,7 +7,7 @@
   box-shadow:
     0 4px 8px 0 rgba(0, 0, 0, 0.2),
     0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  border-radius: 5px;
+  /* border-radius: 5px; */
 }
 .jgis-tabs-list {
   display: inline-flex;
@@ -19,8 +19,8 @@
   gap: 1rem;
   width: 100%;
   font-size: 9px;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
+  /* border-top-left-radius: 5px; */
+  /* border-top-right-radius: 5px; */
   overflow-x: scroll;
 }
 
